--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:description" content="Easily add syntax highlighting to your <code> blocks using one line of code." />
 <link rel="canonical" href="https://ezsyntax.willm.xyz" />
 <meta property="og:url" content="https://ezsyntax.willm.xyz" />
-<meta name="keywords" content="syntax, highlighting, syntax highlighting, HTML, JavaScript, ezsyntax, syntax highlight html, syntax highlight html code, syntax highlighting, syntax highlighting html, html code, html syntax, javascript syntax, highlight, js syntax, html js syntax highlighting, easy santax, ez santax, ezsantax">   
+<meta name="keywords" content="syntax, highlighting, syntax highlighting, HTML, JavaScript, ezsyntax, syntax highlight html, syntax highlight html code, syntax highlighting, syntax highlighting html, html code, html syntax, javascript syntax, highlight, js syntax, html js syntax highlighting, easy syntax, ez syntax, ezsyntax">   
     
     <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous">
