escape meta tags with "code" element in them

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="https://cdn.glitch.com/36eb27a3-cf45-4f46-8b36-e02520a9b7be%2Fcode-solid.svg">
     <meta property="og:title" content="ezSyntax" />
 <meta property="og:locale" content="en_US" />
-<meta name="description" content="Easily add syntax highlighting to your <code> blocks using one line of code." />
-<meta property="og:description" content="Easily add syntax highlighting to your <code> blocks using one line of code." />
+<meta name="description" content="Easily add syntax highlighting to your &lt;code&gt; blocks using one line of code." />
+<meta property="og:description" content="Easily add syntax highlighting to your &lt;code&gt; blocks using one line of code." />
 <link rel="canonical" href="https://ezsyntax.willm.xyz" />
 <meta property="og:url" content="https://ezsyntax.willm.xyz" />
 <meta name="keywords" content="syntax, highlighting, syntax highlighting, HTML, JavaScript, ezsyntax, syntax highlight html, syntax highlight html code, syntax highlighting, syntax highlighting html, html code, html syntax, javascript syntax, highlight, js syntax, html js syntax highlighting, easy syntax, ez syntax, ezsyntax">   
