english is hard

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ The number references to which class number you're wanting to highlight.
        <h2 style="text-align: center;">Examples (3)</h2>
     </div>
     <p class="margin">
-      Here are some example of how to use ezSyntax in different ways, such as <strong>highlighting multiple <code class="pad example">&lt;code&gt;</code> blocks.</strong>
+      Here are some examples of how to use ezSyntax in different ways, such as <strong>highlighting multiple <code class="pad example">&lt;code&gt;</code> blocks.</strong>
       <br>
 <br>
       To highlight multiple code blocks on one <code class="pad">onclick</code> or <code class="pad">onload</code>, seperate each with a semicolon. (<code class="pad example">&lt;span onclick=&quot;syntax('demo', 0); syntax('demo', 1)&quot;&gt;</code>)
